# bazis

./: NOTICE  README.md  pyproject.toml
bazis/core/: __init__.py  admin_abstract.py  app.py  app_factory.py  apps.py  conf.py  configure.py  errors.py  fields.py  i18n.py  models_abstract.py  router.py  routing.py  triggers.py  urls.py
bazis/core/constance_conf/: __init__.py  base.py
bazis/core/locale/: messages.pot
bazis/core/migrations/: 0001_initial.py  0002_auto_20260114_1222.py
bazis/core/routes_abstract/: context.py  initial.py
bazis/core/schemas/: __init__.py  builders.py  cache.py  enums.py  factory.py  fields.py  meta.py  schemas.py  utils.py  validators.py
bazis/core/services/: filtering.py  includes.py  meta_fields.py  pagination.py  relationships.py  route_ctx.py  searching.py  sorting.py  sparse_fieldsets.py
bazis/core/utils/: __init__.py  apps.py  django_types.py  fastapi_monkey_patch.py  files.py  functools.py  imp.py  locale.py  logging_level.py  model_meta.py  network.py  orm.py  pghistory_monkey_patch.py  query_complex.py  schemas.py  sets_order.py  translated_field_utils.py  triggers.py
docs/: README.md  conf.py  dynamic_fields.rst  endpoint_callbacks.rst  generate_dynamic_rst.py  index.rst  openapi.rst  relationships.rst  requirements.txt  response_models.rst  routes.rst  services.rst  setting.rst  sparse_fieldsets.rst  structure.rst
sample/: docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml  generate_local_test_data.py  main.py  manage.py  project.env  pyproject.toml
sample/deploy/config/: admin.py  app.py
sample/dynamic/: models.py  router.py  routes.py
sample/dynamic/migrations/: 0001_initial.py
sample/entity/: models.py  router.py  routes.py
sample/entity/migrations/: 0001_initial.py  0002_parententity_field_parententity_state.py  0003_country_driver_vehiclebrand_vehicle_carriertask_and_more.py  0004_division_organization_driver_divisions_and_more.py  0005_extendedentitynull.py  0006_dependententitynull.py  0007_withprotectedentity.py  0008_withprotectedentitysystem.py
sample/route_injection/: models.py  route_bases.py  router.py  routes.py  schemas.py  services.py
sample/route_injection/migrations/: 0001_initial.py
sample/sample/: main.py  router.py  settings.py
sample/sparse_fieldsets/: models.py  router.py  routes.py
sample/sparse_fieldsets/migrations/: 0001_initial.py  0002_category_article_category.py
tests/: conftest.py  factories.py  test_models.py  test_routes_add.py  test_routes_change.py  test_routes_core.py  test_routes_delete.py  test_sparse_fieldsets.py
tests/test_routes_view/dynamic/: test_context.py  test_errors.py  test_route_filter_fields.py
tests/test_routes_view/entity/: test_calc_property.py  test_context.py  test_errors.py  test_m2m.py  test_reverse.py  test_route_filter_fields.py  test_routes.py  test_routes_filter.py  test_routes_included.py  test_routes_pagination.py  test_routes_search.py  test_routes_sort.py  test_slice_order_by.py
tests/test_routes_view/route_injection/: test_custom_meta.py  (+1 more)
tests/utils/: assert_sql.py  context_test_route_mixin.py
(+27 files in other folders)
